# dal/model/optional_time.go
@@ -14,8 +14,9 @@ type OptionalTime struct {
 	TheDate     time.Time `gorm:"type:date"`
 	TheTime     time.Time `gorm:"type:time with time zone"`
 	TheLocation string
-	Group       string `gorm:"type:character(16)"`
-	IntentRank  *int16 // 限定面试轮次
+	Group       string `gorm:"type:character varying(16)"`
+	IntentRank  uint   // 限定面试轮次
+	TotalCount  uint   // 人数
 }
 
 // TableName OptionalTime's table name
