# dal/model/question.go
@@ -8,7 +8,7 @@ const TableNameQuestion = "question"
 type Question struct {
 	gorm.Model  `swaggerignore:"true"`
 	TheQuestion string `gorm:"type:text" json:"question"`
-	Group       string `gorm:"type:character(16)" json:"group"`
+	Group       string `gorm:"type:character varying(16)" json:"group"`
 }
 
 // TableName Question's table name
